2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: must_get_delta_num

	* rcslex.c (must_get_delta_num): New func.
	* base.h (must_get_delta_num): New func decl.
	* rcs.c (scanlogtext): Use ‘must_get_delta_num’.
	* rcsgen.c (scandeltatext): Likewise.
	* rlog.c (readdeltalog): Likewise.

2010-04-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘strlen’ less.

	* rcs.c (main): Use ‘commsymlen’.
	* rcsfnms.c (pairnames): Use ‘intern’, ‘maybe.bestfit.size’.
	* rcslex.c (lookup): Use ‘intern’.
	* rcstime.c (date2str): Track write count via ‘sprintf’ rv.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Enable 64-bit file offsets.

	* base.h (_FILE_OFFSET_BITS): New #define.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘tiny_branches’ global.

	* base.h (tiny_branches): New var decl (via ‘TINY_DECL’).
	* b-anchor.c (tiny_branches): New var (via ‘TINYK’).
	* rcssyn.c (tiny_branches): Delete static var.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘obstack-printf’.

	* b-divvy.c (accf): New func.
	(accumulate_nonzero_bytes): Delete func.
	* b-divvy.h (accf): New func decl.
	(accumulate_nonzero_bytes): Delete func decl.
	(accs): New macro.
	* b-feph.c (jam_sff): Use ‘accf’.
	* ci.c (ACCB, ACCS): Delete macros.
	(ACCF): New macro.
	(JAM, ADD, incnum, getlogmsg): Use ‘ACCF’.
	* co.c (buildjoin): Use ‘accf’.
	* merger.c (normalize_arg): Likewise.
	* rcsdiff.c (setup_label, main): Likewise.
	* rcsedit.c (naturalize, rcswriteopen): Use ‘accs’.
	* rcsfnms.c (getfullRCSname): Use ‘accf’.
	* rcslex.c (getphrases): Use ‘accs’.
	* rcsrev.c (accumulate_branchno): Likewise.
	(fully_numeric): Use ‘accf’, ‘accs’.
	* rcsutil.c (minus_p, accumulate_arg_quoted): Use ‘accf’.
	(runv): Use ‘accs’, ‘accf’.
	* rlog.c (getnumericrev): Use ‘accf’.

2010-04-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Tighten ‘InitAdmin’.

	* rcsfnms.c (bindex, suffix_matches): Delete func.
	(InitAdmin): Use ‘strrchr’, ‘strcasecmp’.
